Fix: only portfolio scrolls on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -113,6 +113,9 @@ i {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    overflow: auto;
+    max-height: 65vh;
+
 }
 
 .portfolio-item {
